<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_future_tasks"
        android:summary="@string/pref_description_tasks_notifications"
        android:title="@string/pref_title_future_tasks_notifications" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="180"
        android:dependency="notifications_future_tasks"
        android:entries="@array/pref_reminder_time_titles"
        android:entryValues="@array/pref_reminder_time_values"
        android:key="notifications_future_tasks_reminder_time"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_reminder_time" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_future_tasks"
        android:key="notifications_future_tasks_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_future_tasks"
        android:key="notifications_future_tasks_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
