<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/textInputBackgroundLight"
        android:padding="@dimen/padding_xxsmall"
        android:theme="@style/TextInputLayoutDarkAppearance"
        app:errorTextAppearance="@style/TextInputErrorAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_title_black"
            android:drawableStart="@drawable/ic_title_black"
            android:hint="@string/prompt_title"
            android:inputType="text|textAutoCorrect|textCapSentences"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColorDark" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/textInputBackgroundLight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_type"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textColorDark" />

        <View
            android:id="@+id/viewTypeColor"
            android:layout_width="@dimen/item_color"
            android:layout_height="@dimen/item_color"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <ImageButton
            android:id="@+id/imageButtonAddTaskType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/action_add_task_type"
            android:src="@drawable/ic_add_green" />

        <ImageButton
            android:id="@+id/imageButtonEditTaskType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/action_edit_task_type"
            android:src="@drawable/ic_edit_yellow" />

        <ImageButton
            android:id="@+id/imageButtonRemoveTaskType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/action_remove_task_type"
            android:src="@drawable/ic_remove_red" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/textInputBackgroundLight"
        android:padding="@dimen/padding_xxsmall"
        android:theme="@style/TextInputLayoutDarkAppearance"
        app:errorTextAppearance="@style/TextInputErrorAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/ic_calendar_black"
            android:drawableStart="@drawable/ic_calendar_black"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/prompt_date"
            android:inputType="date"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColorDark" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/textInputBackgroundLight"
        android:padding="@dimen/padding_xxsmall"
        android:theme="@style/TextInputLayoutDarkAppearance"
        app:errorTextAppearance="@style/TextInputErrorAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawableLeft="@drawable/ic_clock_black"
            android:drawableStart="@drawable/ic_clock_black"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/prompt_time"
            android:inputType="time"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/textColorDark" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/textInputBackgroundLight"
        android:padding="@dimen/padding_xxsmall"
        android:theme="@style/TextInputLayoutDarkAppearance"
        app:errorTextAppearance="@style/TextInputErrorAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_description_black"
            android:drawableStart="@drawable/ic_description_black"
            android:hint="@string/prompt_description"
            android:inputType="text|textMultiLine|textAutoCorrect|textCapSentences"
            android:minLines="3"
            android:singleLine="false"
            android:textColor="@color/textColorDark" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>