<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pam.schoolify.fragment.ProfileFragment">

    <!-- Update profile progress -->
    <ProgressBar
        android:id="@+id/progressBarProfile"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <!-- Update profile form -->
    <LinearLayout
        android:id="@+id/formProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent"> <!-- UselessParent - Fix rotate crash due to same ID on different layout types -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewProfileImage"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:contentDescription="@string/profile_avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:text="@string/action_change_gravatar" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/textInputBackgroundLight"
                    android:padding="@dimen/padding_xxsmall"
                    android:theme="@style/TextInputLayoutDarkAppearance"
                    app:errorTextAppearance="@style/TextInputErrorAppearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email_black"
                        android:drawableStart="@drawable/ic_email_black"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColorDark" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:background="@color/textInputBackgroundLight"
                    android:padding="@dimen/padding_xxsmall"
                    android:theme="@style/TextInputLayoutDarkAppearance"
                    app:errorTextAppearance="@style/TextInputErrorAppearance">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_user_black"
                        android:drawableStart="@drawable/ic_user_black"
                        android:hint="@string/prompt_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textColorDark" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonUpdateProfile"
                    style="?android:textAppearanceInverse"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@drawable/button_round"
                    android:text="@string/action_update_profile" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
